--- a/Practice/newapp/package.json
+++ b/Practice/newapp/package.json
@@ -10,7 +10,6 @@
     "tsc": "tsc",
     "tsc:w": "tsc -w"
   },
-
   "author": "",
   "license": "ISC",
   "devDependencies": {
@@ -20,5 +19,19 @@
     "concurrently": "^3.4.0",
     "lite-server": "^2.3.0",
     "typescript": "^2.2.2"
+  },
+  "dependencies": {
+    "@angular/common": "^4.0.1",
+    "@angular/compiler": "^4.0.1",
+    "@angular/core": "^4.0.1",
+    "@angular/forms": "^4.0.1",
+    "@angular/http": "^4.0.1",
+    "@angular/platform-browser": "^4.0.1",
+    "@angular/platform-browser-dynamic": "^4.0.1",
+    "@angular/router": "^4.0.1",
+    "core-js": "^2.4.1",
+    "rxjs": "^5.0.3",
+    "systemjs": "^0.20.11",
+    "zone.js": "^0.8.5"
   }
 }
