--- a/qre/src/tsconfig.app.json
+++ b/qre/src/tsconfig.app.json
@@ -4,9 +4,7 @@
     "outDir": "../out-tsc/app",
     "module": "es2015",
     "baseUrl": "",
-    "types": [
-      "hammerjs"
-    ]
+    "types": []
   },
   "exclude": [
     "test.ts",
